# pick

./: .flake8  .gitignore  README.md  apply_aliases.py  apply_colour_scheme.py  manage.py  noxfile.py  populate_db.py  progressbar.py  pylintrc.toml  pyproject.toml  pytest.ini  requirements-3.12.txt  requirements-3.13.txt  requirements.txt
mediabrowser/: admin.py  apps.py  models.py  urls.py  views.py
mediabrowser/static/mediabrowser/: deschover.js  slider.css  slider.js  style.css  tristate.js
mediabrowser/static/pick/: style.css
mediabrowser/templates/mediabrowser/: base.html  film.html  filmlist.html  index.html  serieslist.html
mediabrowser/templates/pick/: index.html
mediabrowser/test/: test_models.py  test_views.py
mediabrowser/test/data/: expected.csv  films.txt  patch.csv
mediabrowser/views/: __init__.py  index.py  person.py  search.py  templates.py  user_rating.py  utils.py  visionitem.py
mediabrowser/views/utils/: __init__.py  search_helpers.py  vision_item_series.py
pick/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: apply_aliases.py  apply_colour_scheme.py  db_to_csv.py  make_series.py  pop_db.py  populate_db.py  populate_db_physical_media.py  populate_db_series.py  setup_django.py  update_items_from_patch.py  utils.py
scripts/populate_db/: __init__.py  get_db_items.py  logger.py  media_info.py  parse_tex.py  person_info.py  populate_db.py  populate_db_series.py  progress_bar.py  read_data_files.py  utils.py  writers.py
scripts/populate_db/mixins/: __init__.py  (+2 more)
scripts/test/: conftest.py  test_filter_films.py  test_populate_db.py
(+17 files in other folders)
